# u50_spmv_host

./: .gitignore  CMakeLists.txt
inc/: config.h  mat_utility.h  mmio.h
script/: run_test.bash
src/: main.cpp  mat_utility.cpp
